# rust-multiverse

./: Cargo.toml  README.md
src/: logging.rs  main.rs  universe.rs
src/supervisor/: error.rs  log_messages.rs  menu_items.rs  mod.rs  supervisor.rs  user_supervisor.rs
src/terminal_ui/: mod.rs  terminal_ui.rs
src/ui/: app.rs  mod.rs  ui.rs
src/universe/: id.rs  intent.rs  logger.rs  mod.rs  relationship.rs  universe.rs  universe_command.rs  universe_event.rs  universe_handle.rs
