[package]
name = "ProjectA_UniverseEngine"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.9.2"
lazy_static = "1.5.0"
rgb = "0.8.91-alpha.3"
chrono = "0.4.42"
serde = { version = "1.0.228", features = ["derive"] }
axum = "0.8.7"
http = "1.4.0"
